[gd_scene load_steps=5 format=3 uid="uid://8mkcauly8f8v"]

[ext_resource type="Script" uid="uid://btapfoqc1o8wy" path="res://level.gd" id="1_cwqvt"]
[ext_resource type="PackedScene" uid="uid://dky3616d6y1hj" path="res://entities/abstract/mob.tscn" id="2_5mrsh"]
[ext_resource type="PackedScene" uid="uid://diowa33ndeo11" path="res://hud.tscn" id="3_safpt"]

[sub_resource type="Curve2D" id="Curve2D_8lq2r"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1152, 0, 0, 0, 0, 0, 1152, 640, 0, 0, 0, 0, 0, 640, 0, 0, 0, 0, 0, 0)
}
point_count = 5

[node name="Level" type="Node"]
script = ExtResource("1_cwqvt")
mob_type = ExtResource("2_5mrsh")
spawn_pattern = Array[float]([1.0, 2.0, 1.0, 5.0])
total_mobs = 3

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 0.5

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(240, 450)

[node name="MobPath" type="Path2D" parent="."]
curve = SubResource("Curve2D_8lq2r")

[node name="MobFollowPath" type="PathFollow2D" parent="MobPath"]

[node name="HUD" parent="." instance=ExtResource("3_safpt")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
